Исправление багов и css

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
 
           <ul class="navigation-user-menu">
             <li class="navigation-user-item navigation-search">
-              <a class="navigation-user-link nav-link-icon-search" href="/modal.html">
+              <a class="navigation-user-link nav-link-icon-search" href="modal.html">
                 <span class="visually-hidden">Поиск.</span>
               </a>
             </li>
@@ -168,7 +168,7 @@
 
                 <div class="catalog-filter-group filter-list-button">
                   <input class="button-filter catalog-filter-submit" type="submit" value="ПРИМЕНИТЬ">
-                  <button class="button-filter catalog-filter-reset">СБРОСИТЬ</button>
+                  <button type="reset" class="button-filter catalog-filter-reset">СБРОСИТЬ</button>
                 </div>
               </form>
             </section>
@@ -183,17 +183,17 @@
               <option class="select-control-cheap" value="cheap">Сначала дешевые</option>
             </select>
             <div class="catalog-card">
-              <button class="catalog-card-variant catalog-card-variant-curent">
+              <button type="button" class="catalog-card-variant catalog-card-variant-curent">
                 <svg xmlns="http://www.w3.org/2000/svg"  focusable="false" aria-hidden="true"  width="16" height="14" fill="none" viewBox="0 0 16 14">
                   <path fill="#000" d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z"/>
                 </svg>
               </button>
-              <button class="catalog-card-variant">
+              <button type="button" class="catalog-card-variant">
                 <svg focusable="false" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
                   <path fill="#000" d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z"/>
                 </svg>
               </button>
-              <button class="catalog-card-variant">
+              <button type="button" class="catalog-card-variant">
                 <svg focusable="false" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
                   <path fill="#000" d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z"/>
                 </svg>
@@ -214,7 +214,7 @@
                 <p class="products-card-type-hostel">Гостиница</p>
                 <p class="products-card-price">От 4000 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
-                <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
+                <button type="button" class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
                 <div class="stars-favorite">
                   <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
@@ -241,7 +241,7 @@
                 <p class="products-card-type-hostel">Гостиница</p>
                 <p class="products-card-price">От 5000 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
-                <button class="products-card-favorites products-card-favorites-active card-buttons-item">В ИЗБРАННОM</button>
+                <button type="button" class="products-card-favorites products-card-favorites-active card-buttons-item">В ИЗБРАННОM</button>
                 <div class="stars-favorite">
                   <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
@@ -268,7 +268,7 @@
                 <p class="products-card-type-hostel">Гостиница</p>
                 <p class="products-card-price">От 2500 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
-                <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
+                <button type="button" class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
                 <div class="stars-favorite">
                   <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
@@ -292,7 +292,7 @@
                 <p class="products-card-type-hostel">Гостиница</p>
                 <p class="products-card-price">От 1500 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
-                <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
+                <button type="button" class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
                 <div class="stars-favorite">
                   <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
@@ -338,7 +338,7 @@
           <h2 class="main-title newsletter-title-catalog">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
           <p class="main-text newsletter-text-catalog">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="get">
-            <input class="newsletter-input newsletter-input-catalog" type="text" placeholder="Ваш e-mail">
+            <input class="newsletter-input newsletter-input-catalog" type="text" placeholder="Ваш e-mail" required name="e-mail:">
             <input class="newsletter-submit" type="submit" value="ПОДПИСАТЬСЯ">
           </form>
         </section>
@@ -380,10 +380,10 @@
         </a>
       </footer>
 
-      <div class="modal-container">
+      <div class="modal-container modal-window-close">
         <div class="modal modal-auth">
           <h3 class="modal-title">Поиск гостиницы в Седоне</h3>
-          <button class="modal-close">
+          <button type="button" class="modal-close">
             <svg class="modal-close-svg" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M14 1.29231L12.7077 0L7 5.70769L1.29231 0L0 1.29231L5.70769 7L0 12.7077L1.29231 14L7 8.29231L12.7077 14L14 12.7077L8.29231 7L14 1.29231Z" fill="black"/>
               </svg>
@@ -397,7 +397,7 @@
                 <label class="modal-label-arrival" for="arrival-date">
                   Дата Заезда:
                 </label>
-                <input class="modal-inpit-date modal-arrival-date" type="datetime" id="arrival-date" value="27 апреля 2020">
+                <input class="modal-inpit-date modal-arrival-date" type="datetime" name="arrival-date" id="arrival-date" value="27 апреля 2020" required>
                 <span class="modal-alert modal-alert-wrong">Мы не можем отправить вас в прошлое.</spa>
               </li>
 
@@ -405,7 +405,7 @@
                 <label class="modal-label-departure" for="departure-date">
                   Дата Выезда:
                 </label>
-                <input class="modal-inpit-date modal-departure-date" type="datetime" id="departure-date" value="1 сентября 2023">
+                <input class="modal-inpit-date modal-departure-date" type="datetime" id="departure-date" name="departure-date" value="1 сентября 2023" required>
                 <span class="modal-alert">На эти даты есть свободные номера. Пока есть.</span>
               </li>
 
@@ -414,15 +414,15 @@
                   <label class="modal-label-mini modal-counter-people" for="counter-people">
                     Взрослые:
                   </label>
-                  <input class="modal-counter modal-inpit-people-counter" id="counter-people" type="number" placeholder="2">
+                  <button type="button" class="min-curent">
+                    <svg class="svg-sum-min" width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3"/>
+                  </button>
+                  <input class="modal-counter modal-inpit-people-counter" name="number-of-adults" id="counter-people" type="number" placeholder="2" required>
                   <button type="button" class="sum-curent">
                     <svg class="svg-sum-min"  width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3"/>
                     </svg>
-                  </button>
-                  <button type="button" class="min-curent">
-                    <svg class="svg-sum-min" width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3"/>
                   </button>
                 </div>
                 <div class="corent-container">
@@ -431,7 +431,7 @@
                       Дети:
                     </label>
                     <span class="tooltip">
-                      <button class="tooltip-toggle" aria-labelledby="tooltip-label-date">
+                      <button type="button" class="tooltip-toggle" aria-labelledby="tooltip-label-date">
                         <svg class="tooltip-icon" width="2" height="12" viewBox="0 0 2 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H2V2H0V0ZM2 12H0V3H2V12Z" fill="white"/>
                           </svg>
@@ -439,15 +439,15 @@
                       <span role="tooltip" class="tooltip-text" id="tooltip-label-date">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
                     </span>
                   </span>
-                  <input class="modal-counter modal-inpit-children-counter" id="counter-children" type="number" placeholder="2">
-                  <button type="button" class="sum-curent">
-                    <svg class="svg-sum-min"  width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3"/>
-                    </svg>
-                  </button>
                   <button type="button" class="min-curent">
                     <svg class="svg-sum-min"  width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3"/>
+                    </svg>
+                  </button>
+                  <input class="modal-counter modal-inpit-children-counter" name="number-of-children" id="counter-children" type="number" placeholder="2" required>
+                  <button type="button" class="sum-curent">
+                    <svg class="svg-sum-min"  width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3"/>
                     </svg>
                   </button>
                 </div>
