--- a/catalog.html
+++ b/catalog.html
@@ -3,15 +3,14 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Каталог</title>
     <link rel="stylesheet" href="styles/style.css">
-
+    <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
   </head>
 
   <body>
     <div class="page-container">
-
       <header class="main-header">
         <a class="navigation-logo" href="index.html">
           <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona" aria-current="page">
@@ -118,21 +117,21 @@
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input visually-hidden" name="type-of-housing" value="hotel" type="radio" checked focusable="true">
+                        <input class="control-input visually-hidden" name="type-of-housing" value="hotel" type="radio" checked>
                         <span class="control-mark-sercule"></span>
                         <span class="control-label">Гостиница</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input visually-hidden" name="type-of-housing" value="Motel" type="radio" focusable="true">
+                        <input class="control-input visually-hidden" name="type-of-housing" value="Motel" type="radio">
                         <span class="control-mark-sercule"></span>
                         <span class="control-label">Мотель</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
                       <label class="control">
-                        <input class="control-input visually-hidden" name="type-of-housing" value="apartments" type="radio" focusable="true">
+                        <input class="control-input visually-hidden" name="type-of-housing" value="apartments" type="radio">
                         <span class="control-mark-sercule"></span>
                         <span class="control-label">Апартаменты</span>
                       </label>
@@ -183,21 +182,21 @@
               <option class="select-control-cheap" value="cheap">Сначала дешевые</option>
             </select>
             <div class="catalog-card">
-              <button type="button" class="catalog-card-variant catalog-card-variant-curent">
+              <a href="catalog.html?view=tile"    class="catalog-card-variant catalog-card-variant-curent">
                 <svg xmlns="http://www.w3.org/2000/svg"  focusable="false" aria-hidden="true"  width="16" height="14" fill="none" viewBox="0 0 16 14">
                   <path fill="#000" d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z"/>
                 </svg>
-              </button>
-              <button type="button" class="catalog-card-variant">
+              </a>
+              <a href="catalog.html?view=card" class="catalog-card-variant">
                 <svg focusable="false" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
                   <path fill="#000" d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z"/>
                 </svg>
-              </button>
-              <button type="button" class="catalog-card-variant">
+              </a>
+              <a href="catalog.html?view=list" class="catalog-card-variant">
                 <svg focusable="false" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
                   <path fill="#000" d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z"/>
                 </svg>
-              </button>
+              </a>
             </div>
           </header>
 
@@ -380,7 +379,7 @@
         </a>
       </footer>
 
-      <div class="modal-container modal-window-close">
+      <div class="modal-container visually-hidden">
         <div class="modal modal-auth">
           <h3 class="modal-title">Поиск гостиницы в Седоне</h3>
           <button type="button" class="modal-close">
@@ -398,14 +397,14 @@
                   Дата Заезда:
                 </label>
                 <input class="modal-inpit-date modal-arrival-date" type="datetime" name="arrival-date" id="arrival-date" value="27 апреля 2020" required>
-                <span class="modal-alert modal-alert-wrong">Мы не можем отправить вас в прошлое.</spa>
+                <span class="modal-alert modal-alert-wrong">Мы не можем отправить вас в прошлое.</span>
               </li>
 
               <li class="modal-form-item">
                 <label class="modal-label-departure" for="departure-date">
                   Дата Выезда:
                 </label>
-                <input class="modal-inpit-date modal-departure-date" type="datetime" id="departure-date" name="departure-date" value="1 сентября 2023" required>
+                <input class="modal-inpit-date modal-departure-date" type="datetime-local" id="departure-date" name="departure-date" value="1 сентября 2023" required>
                 <span class="modal-alert">На эти даты есть свободные номера. Пока есть.</span>
               </li>
 
@@ -417,6 +416,7 @@
                   <button type="button" class="min-curent">
                     <svg class="svg-sum-min" width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3"/>
+                    </svg>
                   </button>
                   <input class="modal-counter modal-inpit-people-counter" name="number-of-adults" id="counter-people" type="number" placeholder="2" required>
                   <button type="button" class="sum-curent">
