Пройдена валидация. Исправлены input в модальном окне

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 
             <li class="navigation-user-item navigation-favorites">
               <a class="navigation-user-link nav-link-icon-favorites" href="#">
-                <span class="favorites-counter">12</span>
                 <span class="visually-hidden">Избранное.</span>
               </a>
             </li>
@@ -198,7 +197,7 @@
                 <label class="modal-label-arrival" for="arrival-date">
                   Дата Заезда:
                 </label>
-                <input class="modal-inpit-date modal-arrival-date" type="datetime-local" name="arrival-date" id="arrival-date" value="27 апреля 2020" required>
+                <input class="modal-inpit-date modal-arrival-date" type="text" name="arrival-date" id="arrival-date" value="27 апреля 2020" required>
                 <span class="modal-alert modal-alert-wrong">Мы не можем отправить вас в прошлое.</span>
               </li>
 
@@ -206,7 +205,7 @@
                 <label class="modal-label-departure" for="departure-date">
                   Дата Выезда:
                 </label>
-                <input class="modal-inpit-date modal-departure-date" type="datetime-local" id="departure-date" name="departure-date" value="1 сентября 2023" required>
+                <input class="modal-inpit-date modal-departure-date" type="text" id="departure-date" name="departure-date" value="1 сентября 2023" required>
                 <span class="modal-alert">На эти даты есть свободные номера. Пока есть.</span>
               </li>
 
